<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title1"
        android:layout_width="321dp"
        android:layout_height="49dp"
        android:fontFamily="sans-serif-condensed"
        android:text="Ken's Calculator"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="38sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <EditText
        android:id="@+id/name"
        android:layout_width="209dp"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/fill_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/amt"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/fill_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <EditText
        android:id="@+id/extraPayment"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Monthly extra Pay 1"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/extraPayment2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Monthly extra Pay 2"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <EditText
        android:id="@+id/downPayment"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/fill_down_payment_amount"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <EditText
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/fill_interest_rate"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <EditText
        android:id="@+id/yrs"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/fill_years"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

</androidx.constraintlayout.widget.ConstraintLayout>